Sat  Sep 18  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a --config flag to point to an alternate mrvoicerc.
     * Wrap the database SQL import in a transaction for efficency.
     * Replace spurious die() calls with status updates.
     * Add a tool, cpancheck.pl, to check CPAN for updates of the modules
       that Mr. Voice uses.
     * Removed obsolete tools.
     * Make it so that the top item in a search is always selected AND visible.

Fri  Sep 17  2004	H. Wade Minter (minter@lunenburg.org)
     * Get the move_tank function working with the HList.  Thanks to 
       Kyle at sickduck.org for the help.
     * Move the CWX-specific functions to their own branch.
     * Use a white background for the "Invalid" songs, too.
     * Apply the red color style to invalid songs in the holding tank, too.

Mon  Sep 13  2004	H. Wade Minter (minter@lunenburg.org)
     * Make nice white backgrounds by default for listboxes and entry 
       widgets.

Sun  Sep 12  2004	H. Wade Minter (minter@lunenburg.org)
     * Add a Publisher choice to the bulk_add routine.
     * Refactor a couple of looped database queries to use placeholders.
     * Use the same color for the Preview Song button (add new song window)
       as we do for the Play button.
     * Switch to a Tk::HList for the mainbox and the holding tank.

Sat  Sep 11  2004	H. Wade Minter (minter@lunenburg.org)
     * Fixed a similar bug in the edit_categories function.
     * Fixed an inaccuracy in progress reporting with update_times, due
       to the previous policy of ignoring invalid files.
     * Provide a sane -initialdir to getOpenFile, getSaveFile, and
       chooseDirectory, if none is set.
     * Remove obsolete code to upgrade to 1.7 (song times in database) and
       1.10 (publisher) table schemas.  If they haven't done it by now,
       this is handled by the upgrade_20.pl utility.
     * Work around breakage in bulk_add if the directory has spaces in it.